# Copyright (c) 2021 vesoft inc. All rights reserved.
#
# This source code is licensed under Apache 2.0 License,
# attached with Common Clause Condition 1.0, found in the LICENSES directory.
#

[package]
name = "nebula-rust"
description = "The rust client to connecto to NebulaGraph 2.0"
version = "2.0.0-alpha"
repository = "https://github.com/vesoft-inc/nebula-rust"
homepage = "https://github.com/vesoft-inc/nebula-rust"
documentation = "https://github.com/vesoft-inc/nebula-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bytes = { version = "0.5", features = ["serde"] }

[build-dependencies]

[dev-dependencies]
