[package]
name = "bb8-nebula"
version = "0.9.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "bb8 Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/bb8-nebula"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio", "graph"]

impl_tokio = ["fbthrift-transport/impl_tokio"]

graph = ["nebula-client/graph"]

[dependencies]
fbthrift-transport = { version = "^0.9", default-features = false }

nebula-client = { version = "^0.7", default-features = false, path = "../nebula-client" }

bb8 = { version = "0.8", default-features = false }
async-trait = { version = "0.1", default-features = false }
