[package]
name = "nebula-fbthrift-transport"
version = "0.0.2"
edition = "2018"
description = "fbthrift transport."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vesoft-inc/nebula-rust"
homepage = "https://github.com/vesoft-inc/nebula-rust"
documentation = "https://docs.rs/nebula-fbthrift-transport-response-handler"
keywords = []
categories = []
readme = "README.md"

[features]
# default = ["tokio_io"]
futures_io = ["futures-x-io/futures_util_io", "futures-x-io-timeoutable/futures_io"]
tokio02_io = ["futures-x-io/tokio02_io_util", "futures-x-io-timeoutable/tokio02_io"]
tokio_io = ["futures-x-io/tokio_io_util", "futures-x-io-timeoutable/tokio_io"]

[dependencies]
fbthrift = { version = "=0.0.2" }
bytes = { version = "0.5", default-features = false, features = [] }
anyhow = { version = "1.0", default-features = false, features = [] }
futures-core = { version = "0.3", default-features = false, features = [] }

fbthrift-transport-response-handler = { path = "../response-handler", package = "nebula-fbthrift-transport-response-handler", version = "0.0.2" }

futures-x-io = { version = "0.3", default-features = false, features = [], optional = true }
futures-x-io-timeoutable = { version = "0.3", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "1.11", default-features = false, features = [] }
async-io = { version = "1.3", default-features = false, features = [] }

tokio02 = { version = "~0.2", default-features = false, features = ["net", "rt-core"], package = "tokio" }
tokio = { version = "1.0", default-features = false, features = ["net", "rt-multi-thread", "rt"] }

async-executor = { version = "1.4" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["futures_io", "tokio02_io"],
    ["futures_io", "tokio_io"],

    ["tokio02_io", "tokio_io"],
]
skip_optional_dependencies = true
