[package]
name = "mobc-nebula"
version = "0.9.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "mobc Nebula Graph/Meta/Storage pool"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/mobc-nebula"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio", "graph"]

impl_tokio = ["fbthrift-transport/impl_tokio"]

graph = ["nebula-client/graph"]

[dependencies]
fbthrift-transport = { version = "^0.9", default-features = false }

nebula-client = { version = "^0.7", default-features = false, path = "../nebula-client" }

mobc = { version = "0.7", default-features = false, features = ["tokio"] }
