# Copyright (c) 2021 vesoft inc. All rights reserved.
#
# This source code is licensed under Apache 2.0 License,
# attached with Common Clause Condition 1.0, found in the LICENSES directory.
#

[package]
name = "nebula-rust"
description = "The rust client to connect to NebulaGraph 2.0"
version = "2.0.0-alpha"
repository = "https://github.com/vesoft-inc/nebula-rust"
homepage = "https://github.com/vesoft-inc/nebula-rust"
documentation = "https://docs.rs/nebula-rust"
readme = "README.md"
license = "Apache 2.0 + Common Clause 1.0"
edition = "2018"

[dependencies]
common = { path = "../interface/common", package = "nebula_rust_interface_common" }
graph = {  path = "../interface/graph", package = "nebula_rust_interface_graph"  }
tokio = { version = "1.8.2", features = ["full"] }
fbthrift = { version = "0.0.2" }
fbthrift-transport = { path = "../fbthrift-transport", package = "nebula-fbthrift-transport" , features = ["tokio_io"], version = "0.0.2" }
bytes = { version = "0.5" }
futures = { version = "0.3.16" }

[build-dependencies]

[dev-dependencies]
