[package]
name = "nebula-fbthrift-common-v2"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph v2 common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-common-v2"
keywords = []
categories = []
readme = "README.md"

[dependencies]
nebula-fbthrift-double = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-double" }

fbthrift = { package = "fbthrift-git", version = "=0.0.7", default-features = false }

anyhow = { version = "1", default-features = false }
