[package]
name = "nebula-fbthrift-common"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph common interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-common"
keywords = []
categories = []
readme = "README.md"

[dependencies]
nebula-fbthrift-common-v3 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-common-v3" }

nebula-fbthrift-common-v2 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-common-v2" }

nebula-fbthrift-common-v1 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-common-v1" }
