[package]
name = "nebula-fbthrift-graph"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph graph interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-graph"
keywords = []
categories = []
readme = "README.md"

[dependencies]
nebula-fbthrift-graph-v3 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-graph-v3" }

nebula-fbthrift-graph-v2 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-graph-v2" }

nebula-fbthrift-graph-v1 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-graph-v1" }
