[package]
name = "nebula-fbthrift-meta-v2"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph v2 meta interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-meta-v2"
keywords = []
categories = []
readme = "README.md"

[dependencies]
fbthrift = { package = "fbthrift-git", version = "=0.0.7", default-features = false }

anyhow = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false }
const-cstr = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

common = { package = "nebula-fbthrift-common-v2", version = "=0.3.0", default-features = false, path = "../nebula-fbthrift-common-v2" }
