[package]
name = "nebula-fbthrift-meta"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph meta interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-meta"
keywords = []
categories = []
readme = "README.md"

[dependencies]
nebula-fbthrift-meta-v3 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-meta-v3" }

nebula-fbthrift-meta-v2 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-meta-v2" }

nebula-fbthrift-meta-v1 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-meta-v1" }
