[package]
name = "nebula-fbthrift-storage"
version = "0.3.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Nebula Graph storage interface"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/nebula-rs"
homepage = "https://github.com/bk-rs/nebula-rs"
documentation = "https://docs.rs/nebula-fbthrift-storage"
keywords = []
categories = []
readme = "README.md"

[dependencies]
nebula-fbthrift-storage-v3 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-storage-v3" }

nebula-fbthrift-storage-v2 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-storage-v2" }

nebula-fbthrift-storage-v1 = { version = "^0.3", default-features = false, path = "../nebula-fbthrift-storage-v1" }
